language/move-lang/tests/move_check/parser/acquires_list_generic.exp
error: 

   ┌── tests/move_check/parser/acquires_list_generic.move:6:21 ───
   │
 6 │     foo() acquires B<CupC<R>> {
   │                     ^ Unexpected '<'
   ·
 6 │     foo() acquires B<CupC<R>> {
   │                     - Expected ','
   │

